noctalia: expand battery view in topbar

--- a/noctalia/settings.json
+++ b/noctalia/settings.json
@@ -135,8 +135,7 @@
                     "showUnreadBadge": true
                 },
                 {
-                    "deviceNativePath": "",
-                    "displayMode": "onhover",
+                    "displayMode": "alwaysShow",
                     "hideIfNotDetected": true,
                     "id": "Battery",
                     "showNoctaliaPerformance": false,
