alacritty/nvim: match color theme

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,33 +1,39 @@
 [window]
 decorations = "None"
 # opacity = 0.9
-# y = 6
-# x = 6
+# padding.x = 5
+dynamic_padding = true
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font Propo", style = "Regular" }
-size = 14
-
-[colors.bright]
-# black   = "#444b6a"
-# blue    = "#7da6ff"
-# cyan    = "#0db9d7"
-# green   = "#b9f27c"
-# magenta = "#bb9af7"
-# red     = "#ff7a93"
-# white   = "#acb0d0"
-# yellow  = "#ff9e64"
+size = 13
 
 [colors.primary]
 # background = "#1a1b26"
-# foreground = "#c0caf5"
+background = "#222436"
+foreground = "#c0caf5"
+
+[colors.cursor]
+# text   = "#1a1b26"
+text   = "#222436"
+cursor = "#c0caf5"
 
 [colors.normal]
-# black   = "#15161e"
-# red     = "#f7768e"
-# green   = "#9ece6a"
-# yellow  = "#e0af68"
-# blue    = "#7aa2f7"
-# magenta = "#bb9af7"
-# cyan    = "#7dcfff"
-# white   = "#a9b1d6"
+black   = "#15161e"
+red     = "#f7768e"
+green   = "#9ece6a"
+yellow  = "#e0af68"
+blue    = "#7aa2f7"
+magenta = "#bb9af7"
+cyan    = "#7dcfff"
+white   = "#a9b1d6"
+
+[colors.bright]
+black   = "#444b6a"
+red     = "#ff7a93"
+green   = "#b9f27c"
+yellow  = "#ff9e64"
+blue    = "#7da6ff"
+magenta = "#bb9af7"
+cyan    = "#0db9d7"
+white   = "#acb0d0"
