noctalia: battery path

--- a/noctalia/settings.json
+++ b/noctalia/settings.json
@@ -135,6 +135,7 @@
                     "showUnreadBadge": true
                 },
                 {
+                    "deviceNativePath": "",
                     "displayMode": "alwaysShow",
                     "hideIfNotDetected": true,
                     "id": "Battery",
