--- a/starship.toml
+++ b/starship.toml
@@ -1,1 +1,14 @@
 add_newline = false
+
+format = '󰣇 $all'
+
+[character]
+# success_symbol = "[❯](bold green)"
+# error_symbol = "[❯](bold red)"
+success_symbol = "[](bold blue)"
+error_symbol = "[󰱶](bold red)"
+
+[username]
+disabled = false
+show_always = true
+format = '[\[](bold)[$user](bold)[\]](bold) '
